# ScrappyTwitchPresistance

./: .gitmodules  Dockerfile  README.md  pyproject.toml
scrappy_db/: start.py
scrappy_db/presistance/configuration/: mongodb_client.py  properties_reader.py
scrappy_db/presistance/controllers/: stream_controller.py  users_controller.py  watch_controller.py
scrappy_db/presistance/repository/: stream_repository.py  users_repository.py  watch_repository.py
scrappy_db/resources/: config.ini
scrappy_db/web/: app.py  errors.py  routes.py
